--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,7 @@
 default: &default
   # adapter: sqlite3
   adapter: postgresql #change to postgresql
+  database: natty_db # added this line per instructions
   pool: 5
   timeout: 5000
 
